# code-ray

./: .gitignore  README.md  out.txt  pyproject.toml
scripts/: dev.sh  install.sh  test_rexxar.py
skills/repo-context/: SKILL.md
src/code_ray.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/coderay/: analyzer.py  cli.py  context.py  entrypoints.py  pack.py  parser.py  project_hints.py  scanner.py  summary.py  symbols.py  tokens.py
