[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-ray"
version = "0.1.0"
description = "Precompute a file-level dependency graph and serve token-efficient code context packs for AI agents."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "qili"}]
keywords = ["code-analysis", "dependency-graph", "ai", "context", "cli"]
dependencies = [
    "tree-sitter>=0.25,<0.26",
    "tree-sitter-java>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
]

[project.scripts]
coderay = "coderay.cli:main"

[tool.setuptools]
packages = ["coderay"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
coderay = []
